--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,16 +3,16 @@
 
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" href="#" [routerLink]="['home']">Home</a>
         </li>
 
-        <li class="nav-item">
-          <a class="nav-link" href="#">Prices</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" href="#" [routerLink]="['prices']">Prices</a>
         </li>
 
-        <li class="nav-item">
-          <a class="nav-link" href="#">Protected</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" href="#" [routerLink]="['protected']">Protected</a>
         </li>
 
       </ul>
