--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
           <a class="nav-link" href="#" [routerLink]="['prices']">Prices</a>
         </li>
 
-        <li class="nav-item" routerLinkActive="active">
+        <li class="nav-item" routerLinkActive="active" *ngIf="auth.loggedIn">
           <a class="nav-link" href="#" [routerLink]="['protected']">Protected</a>
         </li>
 
